# laudareProject

./: .gitignore  main.py  pyproject.toml
code/VGG16/: TsneKmeans.py  extractFeatures.py  trainPageRegression.py  vgg16_utilities.py
code/utilities/: applyBoundingBoxes.py
